--- a/ramdisk/init.bacon.rc
+++ b/ramdisk/init.bacon.rc
@@ -15,6 +15,7 @@
 #
 
 import /init.qcom-common.rc
+import /init.performance_profiles.rc
 
 on fs
     mount_all ./fstab.bacon
@@ -38,6 +39,7 @@ on init
     # Support legacy paths
     symlink /storage/emulated/legacy /sdcard
     symlink /storage/emulated/legacy /mnt/sdcard
+    symlink /storage/emulated/legacy /storage/sdcard0
     symlink /mnt/shell/emulated/0 /storage/emulated/legacy
 
 on post-fs
@@ -47,6 +49,10 @@ on post-fs-data
     # Torch
     chown system camera /sys/class/leds/torch-light/brightness
     chmod 0660 /sys/class/leds/torch-light/brightness
+
+    # RGB Kcal
+    chown system system /sys/devices/platform/kcal_ctrl.0/kcal
+    chmod 0660 /sys/devices/platform/kcal_ctrl.0/kcal
 
 # virtual sdcard daemon running as media_rw (1023)
 service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
