--- a/ramdisk/init.qcom-common.rc
+++ b/ramdisk/init.qcom-common.rc
@@ -289,6 +289,11 @@ on fs
     mkdir /dev/bus 0755 root root
     mkdir /dev/bus/usb 0755 root root
 
+    restorecon_recursive   /persist
+    mkdir /persist/data 0700 system system
+    mkdir /persist/data/sfs 0700 system system
+    mkdir /persist/data/tz 0700 system system
+
 on charger
     # Enable Power modes and set the CPU Freq Sampling rates
     write /sys/module/lpm_levels/enable_low_power/l2 2
@@ -362,7 +367,7 @@ on property:init.svc.bootanim=stopped
     write /sys/devices/system/cpu/cpufreq/interactive/io_is_busy 1
     write /sys/devices/system/cpu/cpufreq/interactive/target_loads "85 1500000:90 1800000:70"
     write /sys/devices/system/cpu/cpufreq/interactive/min_sample_time "40000 1700000:80000"
-    write /sys/devices/system/cpu/cpufreq/interactive/sampling_down_factor 100000
+    write /sys/devices/system/cpu/cpufreq/interactive/max_freq_hysteresis 100000
     write /sys/devices/system/cpu/cpufreq/interactive/timer_rate 20000
 
     write /sys/module/cpu_boost/parameters/boost_ms 10
@@ -568,20 +573,7 @@ service time_daemon /system/bin/time_daemon
     user root
     group root
 
-service qrngd /system/bin/qrngd -f
-    class main
-    user root
-    group root
-
-service qrngp /system/bin/qrngp
-    class main
-    user root
-    group root
-    oneshot
-    disabled
-
 on property:sys.boot_completed=1
-    start qrngp
     write /sys/devices/virtual/graphics/fb0/panel_calibration 1
 
 on property:vold.decrypt=trigger_restart_framework
